...

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="handleClick"
                    android:text="#1 - view setting"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="N/A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="N/A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="N/A"
                    android:textSize="16sp" />
            </TableRow>
...
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Minutes:" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  " />

            <TextView
...
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Size:" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  " />
        </LinearLayout>

...

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/word1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="N/A"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/word10"
                    android:layout_width="106dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="N/A"
                    android:textSize="16sp" />

...
