...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <Spinner
        android:id="@+id/boardSizeSpinner"
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toEndOf="@+id/boardSizeText"
        app:layout_constraintTop_toBottomOf="@+id/gameMinutesSpinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/boardSizeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
